--- a/vercel.json
+++ b/vercel.json
@@ -23,8 +23,8 @@
     }
   ],
   "env": {
-    "MONGODB_URI": "@mongodb_uri",
-    "JWT_SECRET": "@jwt_secret",
+    "MONGODB_URI": "mongodb+srv://vaibhavrana0204_db_user:z1ZkNo1wAeNYatGv@portfolio.la9bew1.mongodb.net/?retryWrites=true&w=majority&appName=Portfolio",
+    "JWT_SECRET": "your_super_secret_jwt_key_here",
     "PORT": "5000"
   }
 }
