--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,21 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "description": "Backend for MERN Portfolio",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "mern",
+    "backend",
+    "express",
+    "mongodb",
+    "portfolio"
+  ],
+  "author": "Vaibhav Rana",
+  "license": "MIT",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -23,5 +29,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
