--- a/package.json
+++ b/package.json
@@ -1,14 +1,37 @@
 {
   "name": "portfolio-mern",
   "version": "1.0.0",
+  "description": "MERN Stack Portfolio Website",
+  "main": "server/server.js",
   "scripts": {
     "build": "cd client && npm install && npm run build",
     "start": "cd server && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "cd server && npm run dev",
-    "client": "cd client && npm start"
+    "server": "cd server && npm run dev || npm start",
+    "client": "cd client && npm start",
+    "install-client": "cd client && npm install",
+    "install-server": "cd server && npm install",
+    "install-all": "npm run install-server && npm run install-client"
   },
   "dependencies": {
     "concurrently": "^7.6.0"
-  }
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/1vaibhavrana/Portfolio.git"
+  },
+  "keywords": [
+    "portfolio",
+    "mern",
+    "react",
+    "nodejs",
+    "mongodb",
+    "express"
+  ],
+  "author": "Vaibhav Rana",
+  "license": "MIT"
 }
