--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "server/server.js",
@@ -21,10 +22,5 @@
       "src": "/(.*)",
       "dest": "client/build/$1"
     }
-  ],
-  "env": {
-    "MONGODB_URI": "mongodb+srv://vaibhavrana0204_db_user:z1ZkNo1wAeNYatGv@portfolio.la9bew1.mongodb.net/?retryWrites=true&w=majority&appName=Portfolio",
-    "JWT_SECRET": "your_super_secret_jwt_key_here",
-    "PORT": "5000"
-  }
+  ]
 }
